--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -19,6 +19,66 @@
         <ul><a href="https://instagram.com/haasanbal" target="_blank"><img id="logo" src="images/instagram.png"></a></ul>
 
         <hr>
+        <h4>My Projects</h4>
+        <div class="project">
+            <p class="project-header">MyFilmList</p>
+            <strong>Node.js WebApp for listing watched films and comparing with your friends.<br></strong><br>
+            <button onclick="popupDetail(1);" id="button-1">Show Details</button>
+            
+            <p id="detail-1">
+            MyFilmList is a Web and IOS app.<br>
+
+            You can add films/series that you watched, will wath or watching.<br>
+
+            After creating your profile, you can use our Match Algorithm to calculate your MyFilmList score with your friends.<br>
+
+            The algorithm calculates Euclidean distance between genres count.<br>
+
+            <br><a href="https://github.com/hasanbal/MyFilmList" target="_blank">GitHub Link</a>
+            </p>
+            
+            <hr>
+        </div>
+        <div class="project">
+            <p class="project-header">MusicTwin</p>
+            <strong>MusicTwin is a web app that finds your music twin by using Spotify.<br></strong><br>
+            <button onclick="popupDetail(2);" id="button-2">Show Details</button>
+
+            <p id="detail-2">
+            You can visit your MusicTwin's profile and discover new artists, playlists, tracks.<br>
+            Live Demo: <a href="https://musictwin.xyz" target="_blank">https://musictwin.xyz</a><br>
+
+            <br><a href="https://github.com/hasanbal/MusicTwin" target="_blank">GitHub Link</a>
+            </p>
+
+            <hr>
+        </div>
+
+        <div class="project">
+            <p class="project-header">WhenShouldILeaveHome</p>
+            <strong>This is an API which helps you to choice when you should leave at home for a flight.<br></strong><br>
+            <button onclick="popupDetail(3);" id="button-3">Show Details</button>
+
+            <p id="detail-3">
+            Also, this API is our Hackathon Project and we placed 2nd among Turkey in the Hackathon Competition.<br>
+            <br><a href="https://github.com/hasanbal/WhenShouldILeaveHome" target="_blank">GitHub Link</a>
+            </p>
+
+            <hr>
+        </div>
+        <div class="project">
+            <p class="project-header">LOChat</p>
+            <strong>LOChat is a Native Location-Based Anonymous Chat App.<br></strong><br>
+            <button onclick="popupDetail(4);" id="button-4">Show Details</button>
+
+            <p id="detail-4">
+            You can chat anonymously with users near you.<br>
+            You can see messages that sent at most 1000 meters away from you.<br>
+            Also, your messages can visible only at most 1000 meters far users from you.<br>
+            <br><a href="https://github.com/hasanbal/LOchat-IOS" target="_blank">GitHub Link</a>
+            </p>
+            <hr>
+        </div>
 
         <h4>Get Random Image From My Gallery</h4>
         <button onclick="getRandomImage();">Pick Random Image</button><br><br>       
