Make smaller logo & Fix small bug on show/hide details button.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,9 +14,9 @@
         <h4>Short Brief</h4>
         <p>Hi, I'm Hasan from Turkey. I'm computer engineering student at METU.<br>I love competitive programming, listening music and making new friends.</p>
         <h4>Some of my profiles:</h4>
-        <ul><a href="https://linkedin.com/in/hasanbal" target="_blank"><img id="logo" src="images/linkedin.png"></a></ul>
-        <ul><a href="https://github.com/hasanbal" target="_blank"><img id="logo" src="images/github.png"></a></ul>
-        <ul><a href="https://instagram.com/haasanbal" target="_blank"><img id="logo" src="images/instagram.png"></a></ul>
+        <ul><a href="https://linkedin.com/in/hasanbal" target="_blank"><img id="logo" src="images/linkedin.png"></a>
+        <a href="https://github.com/hasanbal" target="_blank"><img id="logo" src="images/github.png"></a>
+        <a href="https://instagram.com/haasanbal" target="_blank"><img id="logo" src="images/instagram.png"></a></ul>
 
         <hr>
         <h4>My Projects</h4>
