--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="loadComments();">
     <div id="content">
         <h1 id="title">Hasan Bal</h1>
         <h5 id="subtitle">Computer Engineering Student</h5>
@@ -18,6 +18,14 @@
         <a href="https://github.com/hasanbal" target="_blank"><img id="logo" src="images/github.png"></a>
         <a href="https://instagram.com/haasanbal" target="_blank"><img id="logo" src="images/instagram.png"></a></ul>
 
+        <hr>
+        <h4>Comments</h4>
+        <ul id="comments"></ul>
+        <hr>
+        <form method="POST" action="/comments">
+        <textarea name="comment"></textarea><br>
+        <input type="submit" value="Add Comment">
+        </form>
         <hr>
         <h4>My Projects</h4>
         <div class="project">
