--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hasan Bal</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body onload="loadComments();">
-    <div id="content">
-        <h1 id="title">Hasan Bal</h1>
-        <h5 id="subtitle">Computer Engineering Student</h5>
-        <hr>
-        <h4>Short Brief</h4>
-        <p>Hi, I'm Hasan from Turkey. I'm computer engineering student at METU.<br>I love competitive programming, listening music and making new friends.</p>
-        <h4>Some of my profiles:</h4>
-        <ul><a href="https://linkedin.com/in/hasanbal" target="_blank"><img id="logo" src="images/linkedin.png"></a>
-        <a href="https://github.com/hasanbal" target="_blank"><img id="logo" src="images/github.png"></a>
-        <a href="https://instagram.com/haasanbal" target="_blank"><img id="logo" src="images/instagram.png"></a></ul>
 
-        <hr>
-        <h4>Comments</h4>
-        <ul id="comments"></ul>
-        <form method="POST" action="/comments">
-        <span> View Latest
+<head>
+	<meta charset="UTF-8">
+	<title>Hasan Bal</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js"></script>
+</head>
+
+<body onload="loadComments();">
+	<div id="content">
+		<h1 id="title">Hasan Bal</h1>
+		<h5 id="subtitle">Computer Engineering Student</h5>
+		<hr>
+		<h4>Short Brief</h4>
+		<p>Hi, I'm Hasan from Turkey. I'm computer engineering student at
+			METU.<br>I love competitive programming, listening music and making new friends.</p>
+			<h4>Some of my profiles:</h4>
+			<ul><a href="https://linkedin.com/in/hasanbal" target="_blank" rel="noopener"><img id="logo" src="images/linkedin.png" alt="img"></a>
+					<a href="https://github.com/hasanbal" target="_blank" rel="noopener"><img id="logo" src="images/github.png" alt="img"></a>
+						<a href="https://instagram.com/haasanbal"
+							target="_blank" rel="noopener"><img id="logo" src="images/instagram.png" alt="img"></a></ul>
+
+			<hr>
+			<h4>Comments</h4>
+			<ul id="comments"></ul>
+			<form method="POST" action="/comments">
+				<span> View Latest
         <select name="limit" id="limit" onchange="limitComments(this);">
           <option value="5">5</option>
           <option value="10" selected="selected">10</option>
@@ -30,23 +34,23 @@
           <option value="50">50</option>
         </select>
         Comments. </span>
-        <hr>
+				<hr>
 
 
-        <span>Username:<br></span> <input type="text" name="username" required><br>
-        <br><span>Comment:<br></span>
-        <textarea name="comment"></textarea><br>
-        <br><input type="submit" value="Add Comment">
+				<span>Username:<br></span> <input type="text" name="username" required><br>
+				<br><span>Comment:<br></span>
+				<textarea name="comment"></textarea><br>
+				<br><input type="submit" value="Add Comment">
         </form>
-        <hr>
-        <h4>My Projects</h4>
-        <div class="project">
-            <p class="project-header">MyFilmList</p>
-            <strong>Node.js WebApp for listing watched films and comparing with your friends.<br></strong><br>
-            <button onclick="popupDetail(1);" id="button-1">Show Details</button>
-            
-            <p id="detail-1">
-            MyFilmList is a Web and IOS app.<br>
+				<hr>
+				<h4>My Projects</h4>
+				<div class="project">
+					<p class="project-header">MyFilmList</p>
+					<strong>Node.js WebApp for listing watched films and comparing with your friends.<br></strong><br>
+					<button onclick="popupDetail(1);" id="button-1">Show Details</button>
+
+					<p id="detail-1">
+						MyFilmList is a Web and IOS app.<br>
 
             You can add films/series that you watched, will wath or watching.<br>
 
@@ -54,57 +58,60 @@
 
             The algorithm calculates Euclidean distance between genres count.<br>
 
-            <br><a href="https://github.com/hasanbal/MyFilmList" target="_blank">GitHub Link</a>
-            </p>
-            
-            <hr>
-        </div>
-        <div class="project">
-            <p class="project-header">MusicTwin</p>
-            <strong>MusicTwin is a web app that finds your music twin by using Spotify.<br></strong><br>
-            <button onclick="popupDetail(2);" id="button-2">Show Details</button>
+						<br><a href="https://github.com/hasanbal/MyFilmList" target="_blank" rel="noopener">GitHub Link</a>
+					</p>
 
-            <p id="detail-2">
-            You can visit your MusicTwin's profile and discover new artists, playlists, tracks.<br>
-            Live Demo: <a href="https://musictwin.xyz" target="_blank">https://musictwin.xyz</a><br>
+					<hr>
+				</div>
+				<div class="project">
+					<p class="project-header">MusicTwin</p>
+					<strong>MusicTwin is a web app that finds your music twin by using Spotify.<br></strong><br>
+					<button onclick="popupDetail(2);" id="button-2">Show Details</button>
 
-            <br><a href="https://github.com/hasanbal/MusicTwin" target="_blank">GitHub Link</a>
-            </p>
+					<p id="detail-2">
+						You can visit your MusicTwin's profile and discover new artists, playlists, tracks.<br>
+            Live Demo: <a href="https://musictwin.xyz" target="_blank" rel="noopener">https://musictwin.xyz</a><br>
 
-            <hr>
-        </div>
+						<br><a href="https://github.com/hasanbal/MusicTwin" target="_blank" rel="noopener"
+						>GitHub Link</a>
+					</p>
 
-        <div class="project">
-            <p class="project-header">WhenShouldILeaveHome</p>
-            <strong>This is an API which helps you to choice when you should leave at home for a flight.<br></strong><br>
-            <button onclick="popupDetail(3);" id="button-3">Show Details</button>
+					<hr>
+				</div>
 
-            <p id="detail-3">
-            Also, this API is our Hackathon Project and we placed 2nd among Turkey in the Hackathon Competition.<br>
-            <br><a href="https://github.com/hasanbal/WhenShouldILeaveHome" target="_blank">GitHub Link</a>
-            </p>
+				<div class="project">
+					<p class="project-header">WhenShouldILeaveHome</p>
+					<strong>This is an API which helps you to choice when you should leave at home for a flight.<br></strong><br>
+					<button onclick="popupDetail(3);" id="button-3">Show Details</button>
 
-            <hr>
-        </div>
-        <div class="project">
-            <p class="project-header">LOChat</p>
-            <strong>LOChat is a Native Location-Based Anonymous Chat App.<br></strong><br>
-            <button onclick="popupDetail(4);" id="button-4">Show Details</button>
+					<p id="detail-3">
+						Also, this API is our Hackathon Project and we placed 2nd among Turkey in the Hackathon
+						Competition.<br>
+						<br><a href="https://github.com/hasanbal/WhenShouldILeaveHome" target="_blank" rel="noopener">GitHub Link</a>
+					</p>
 
-            <p id="detail-4">
-            You can chat anonymously with users near you.<br>
+					<hr>
+				</div>
+				<div class="project">
+					<p class="project-header">LOChat</p>
+					<strong>LOChat is a Native Location-Based Anonymous Chat App.<br></strong><br>
+					<button onclick="popupDetail(4);" id="button-4">Show Details</button>
+
+					<p id="detail-4">
+						You can chat anonymously with users near you.<br>
             You can see messages that sent at most 1000 meters away from you.<br>
             Also, your messages can visible only at most 1000 meters far users from you.<br>
-            <br><a href="https://github.com/hasanbal/LOchat-IOS" target="_blank">GitHub Link</a>
-            </p>
-            <hr>
-        </div>
+						<br><a href="https://github.com/hasanbal/LOchat-IOS" target="_blank" rel="noopener" rel="noopener">GitHub Link</a>
+					</p>
+					<hr>
+				</div>
 
-        <h4>Get Random Image From My Gallery</h4>
-        <button onclick="getRandomImage();">Pick Random Image</button><br><br>       
-        <img id="randomImg" src="images/ig1.png"><br>
+				<h4>Get Random Image From My Gallery</h4>
+				<button onclick="getRandomImage();">Pick Random Image</button><br><br>
+				<img id="randomImg" src="images/ig1.png" alt="ig"><br>
 
 
     </div>
-  </body>
+</body>
+
 </html>
