--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 		<script src="script.js"></script>
 	</head>
 
-	<body onload="loadComments();">
+	<body onload="loadComments();checkLogin();">
 		<div id="content">
 			<h1 id="title">Hasan Bal</h1>
 			<h5 id="subtitle">Computer Engineering Student</h5>
@@ -23,24 +23,32 @@
 
 			<hr>
 			<h4>Comments</h4>
-			<ul id="comments"></ul>
-			<form method="POST" action="/comments">
-				<span> View Latest
-				<select name="limit" id="limit" onchange="limitComments(this);">
-					<option value="5">5</option>
-					<option value="10" selected="selected">10</option>
-					<option value="20">20</option>
-					<option value="50">50</option>
-				</select>
-				Comments. </span>
-				<hr>
+			<div id="comments-error-div">
+				<p id="comments-error-msg">You should login to read and write comments.</p>
+			</div>
+
+			<div id="comments-div">
+				<ul id="comments"></ul>
+				<form method="POST" action="/comments">
+					<span> View Latest
+					<select name="limit" id="limit" onchange="limitComments(this);">
+						<option value="5">5</option>
+						<option value="10" selected="selected">10</option>
+						<option value="20">20</option>
+						<option value="50">50</option>
+					</select>
+					Comments. </span>
+					<hr>
 
 
-				<span>Username:<br></span> <input type="text" name="username" required><br>
-				<br><span>Comment:<br></span>
-				<textarea name="comment"></textarea><br>
-				<br><input type="submit" value="Add Comment">
-			</form>
+					<span>Username:</span><p id="username"></p>
+					<span>Comment:<br></span>
+					<textarea name="comment"></textarea><br>
+					<br><input type="submit" value="Add Comment">
+					<p id="logout"></p>
+				</form>
+			</div>
+
 			<hr>
 			<h4>My Projects</h4>
 			<div class="project">
