--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,6 +34,7 @@
 					<option value="original" selected="selected">Original</option>
 					<option value="en">English</option>
 					<option value="de">German</option>
+					<option value="ro">Romanian</option>
 					<option value="ru">Russian</option>
 					<option value="tr">Turkish</option>
 				</select>
@@ -52,7 +53,7 @@
 
 					<span>Username:</span><p id="username"></p>
 					<span>Comment:<br></span>
-					<textarea name="comment"></textarea><br>
+					<textarea name="comment" maxlength="100"></textarea><br>
 					<br><input type="submit" value="Add Comment">
 					<p id="logout"></p>
 				</form>
